# dri_gridded_data

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
config/: GEARhrly.yaml  GEARhrly_base.yaml  HadUK-Grid_base.yaml  geardailyGB.yaml  test.yaml
notebooks/: Example 1.ipynb  Examples_2.ipynb  conda_env_zarrv3.txt  package_installation.ipynb  thames_cat_map.html  utils.py
scripts/: GEAR_config.py  convert.py  convert_GEAR_beam.sbatch  convert_GEARhrly_base.sbatch  download_test_data.py  generate_test_data.py
scripts/G2G/: convert_G2G_beam.sbatch
scripts/GEAR/: convert_GEAR_beam.py  convert_GEAR_beam.sbatch  convert_GEAR_beam_dask.py  dask_runner.py  dask_runner_LOTUS.py  test_convert_GEAR_beam.py
scripts/GEAR/daily/: convert_GEAR_daily_beam.py  matbro_geardailyNI.yaml
scripts/GEAR/hrly/: convert_GEAR_beam.py  convert_GEAR_beam_dask.py  dask_runner_link.py  matbro_GEAR_hrly.yaml
scripts/chess-met/: config_chessmet.yaml  convert_chess-met_beam.py
scripts/chess-scape/: config_chessscape.yaml  convert_chess-scape_beam.py  convert_chess-scape_beam.sbatch
scripts/wrf/: config_wrf.yaml  convert_wrf.sbatch  convert_wrf_beam.py  convert_wrf_beam.sbatch  preprocess1.py  preprocess1.sbatch
src/dri_gridded_data/: converters.py  utils.py
src/dri_gridded_data/chessmet/: converter.py  converters.py
src/dri_gridded_data/gear/: converters.py
src/dri_gridded_data/wrf/: converters.py
test_data/expected.zarr/: .zattrs  .zmetadata
test_data/expected.zarr/crs/: .zattrs
tests/integration/: test_netcdf_zarr_conversion.py
(+560 files in other folders)
