[project]
name = "dri-gridded-data"
version = "0.1.0"
description = "FDRI gridded data product for converting various datasets into Zarr format."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-beam>=2.65.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.6",
    "omegaconf>=2.3.0",
    "pangeo-forge-recipes>=0.10.8",
    "xarray>=2025.6.1",
    "zarr>=2.18.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "integration: integration tests of conversion scripts",
    "slow: marks tests as slow",
    "unit: marks tests as unit tests",
]

